@@ -352,22 +352,6 @@
       </td> 
     </tr>
 
-
-    <tr>
-      <td><p align="center"><img src="@IMAGES@windows.png"></p></td>
-      <td>MS Windows</td>
-      <td>
-	Prev
-      </td>
-      <td>
-	<strong>Go <a href="windows.html">here</a>
-      </td>
-      <td>1.8.2-1</td>
-      <td>
-	<a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a>
-      </td>
-    </tr>
-
     <tr>
       <td><img src="@IMAGES@daemon.png" alt="FreeBSD daemon"></td>
       <td>FreeBSD</td>
@@ -525,22 +509,6 @@
     </tr>
 
     <tr>
-      <td><p align="center"><img src="@IMAGES@windows.png"></p></td>
-      <td>
-	MS Windows</td>
-      <td>
-	Current/[curr]
-      </td>
-      <td>
-	<strong>Go <a href="windows.html">here</strong></a>
-      </td>
-      <td>1.6.11</td>
-      <td>
-	<a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a>
-      </td> 
-    </tr>
-
-    <tr>
       <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
       <td>
 	MacOS X/Fink
@@ -555,8 +523,6 @@
       <td>?</td>  
       <td>?</td> 
     </tr>
-
-
     
     <tr>
       <td></td>
